--- a/sass/style.css
+++ b/sass/style.css
@@ -42,7 +42,7 @@ body {
 }
 
 @media screen and (min-width: 962px) {
-  .headerSec2 .none {
+  .none {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -50,12 +50,12 @@ body {
         align-self: center;
     gap: 20px;
   }
-  .headerSec2 .none img {
+  .none img {
     -ms-flex-item-align: center;
         -ms-grid-row-align: center;
         align-self: center;
   }
-  .headerSec2 .directory {
+  .directory {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -68,7 +68,7 @@ body {
         -ms-flex-align: center;
             align-items: center;
   }
-  .headerSec2 .contact {
+  .contact {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -81,7 +81,7 @@ body {
         -ms-flex-align: center;
             align-items: center;
   }
-  .headerSec2 .headerSec2 {
+  .headerSec2 {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -95,7 +95,7 @@ body {
             align-items: center;
     padding-top: 10px;
   }
-  .headerSec2 .headerSec2 ul {
+  .headerSec2 .none ul {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -105,10 +105,10 @@ body {
     list-style-type: none;
     gap: 20px;
   }
-  .headerSec2 .menuLine {
+  .menuLine {
     display: none;
   }
-  .headerSec2 .getAppBtn {
+  .getAppBtn {
     background: -webkit-gradient(linear, left top, left bottom, from(#ef9b11), to(#405558));
     background: linear-gradient(180deg, #ef9b11 0%, #405558 100%);
     border-radius: 10px;
