--- a/sass/style.scss
+++ b/sass/style.scss
@@ -29,8 +29,10 @@
   height: 50vw;
 
   h1 {
-      padding-top: 10px;
-    font-size: 20px;
+    padding-top: 10px;
+    line-height: 1.5pc;
+    font-size: 18px;
+    padding-bottom: 5px;
   }
   p {
     font-size: 12px;
@@ -86,5 +88,26 @@
     height: 43px;
     color: #fff;
     font-weight: 600;
+  }
+  .section1 {
+    padding-left: $sidePadding;
+    padding-right: $sidePadding;
+    background-image: url(/images/section1Bg.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 50vw;
+
+    h1 {
+      padding-top: 30px;
+      font-size: 8vw;
+      line-height: 6pc;
+      padding-bottom: 20px;
+    }
+    p {
+      font-size: 30px;
+      width: 500px;
+      font-weight: 400;
+    }
   }
 }
