section one done

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -29,14 +29,14 @@
   height: 50vw;
 
   h1 {
-    padding-top: 10px;
-    line-height: 1.5pc;
-    font-size: 18px;
-    padding-bottom: 5px;
+    line-height: 1.25;
+    font-size: 8vw;
+    padding-bottom:10px;
+
   }
   p {
-    font-size: 12px;
-    width: 200px;
+    font-size: 3vw;
+    width: 50vw;
     font-weight: 400;
   }
 }
@@ -99,14 +99,14 @@
     height: 50vw;
 
     h1 {
-      padding-top: 30px;
+      padding-top: 50px;
       font-size: 8vw;
-      line-height: 6pc;
+      line-height:10vw;
       padding-bottom: 20px;
     }
     p {
-      font-size: 30px;
-      width: 500px;
+      font-size: 3vw;
+      width: 60vw;
       font-weight: 400;
     }
   }
