--- a/sass/style.css
+++ b/sass/style.css
@@ -63,6 +63,52 @@ body {
   font-weight: 400;
 }
 
+.section2 {
+  background-image: url(/images/sectionTwoBg.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.whatWeDo {
+  padding-left: 3vw;
+  padding-right: 3vw;
+  padding-top: 80px;
+}
+
+.whatWeDo .finFreedom {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 20px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.whatWeDo .WwdLists-item {
+  background: #ffffff;
+  -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+          box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 10px;
+  min-height: 450px;
+  padding-left: 28px;
+  padding-top: 60px;
+}
+
+.whatWeDo .WwdLists-item img {
+  padding-bottom: 10px;
+}
+
+.whatWeDo .WwdLists-item p {
+  padding-top: 5x;
+  line-height: 30px;
+}
+
+.botmLine {
+  padding-top: 50px;
+  text-align: center;
+}
+
 @media screen and (min-width: 962px) {
   .none {
     display: -webkit-box;
@@ -71,11 +117,6 @@ body {
     -ms-flex-item-align: center;
         align-self: center;
     gap: 20px;
-  }
-  .none img {
-    -ms-flex-item-align: center;
-        -ms-grid-row-align: center;
-        align-self: center;
   }
   .directory {
     display: -webkit-box;
@@ -150,14 +191,76 @@ body {
   }
   .section1 h1 {
     padding-top: 50px;
-    font-size: 8vw;
+    font-size: 6vw;
     line-height: 10vw;
     padding-bottom: 20px;
   }
   .section1 p {
-    font-size: 3vw;
-    width: 60vw;
+    font-size: 2vw;
+    width: 50vw;
     font-weight: 400;
+  }
+  .section2 {
+    height: 1000px;
+  }
+  .finances {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    padding-left: 3vw;
+    padding-right: 3vw;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    width: 100%;
+  }
+  .finances .finBox {
+    width: 160px;
+    height: 160px;
+    padding: 12px 30px;
+    padding-top: 20px;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    background: #ffffff;
+    -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+            box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  }
+  .finances .finBox p {
+    font-weight: 600;
+    line-height: 50px;
+  }
+  .whatWeDo h3 {
+    font-weight: bold;
+    font-size: 50px;
+  }
+  .WwdLists {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+  .WwdLists-item {
+    width: 31%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .WwdLists-item .girlholdingphone {
+    width: 77%;
+  }
+  .botmLine {
+    padding-top: 100px;
+    text-align: center;
   }
 }
 /*# sourceMappingURL=style.css.map */
