--- a/sass/style.css
+++ b/sass/style.css
@@ -99,14 +99,83 @@ body {
   padding-bottom: 10px;
 }
 
+.whatWeDo .WwdLists-item h4 {
+  padding-top: 10px;
+}
+
 .whatWeDo .WwdLists-item p {
-  padding-top: 5x;
+  padding-top: 10px;
   line-height: 30px;
 }
 
 .botmLine {
   padding-top: 50px;
   text-align: center;
+}
+
+.section3 {
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(239, 155, 17, 0.5)), to(rgba(64, 85, 88, 0.5)));
+  background: linear-gradient(180deg, rgba(239, 155, 17, 0.5) 0%, rgba(64, 85, 88, 0.5) 100%);
+  padding-left: 3vw;
+  padding-right: 3vw;
+  padding-top: 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: reverse;
+      -ms-flex-direction: column-reverse;
+          flex-direction: column-reverse;
+}
+
+.section3 h2 {
+  color: #ffffff;
+}
+
+.section3 p {
+  font-size: 12px;
+  color: #ffffff;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100%;
+  max-width: 500px;
+  line-height: 30px;
+  padding-top: 20px;
+}
+
+.section3 .finFree {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 20px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 200px;
+}
+
+.section3 .CanBut {
+  background: -webkit-gradient(linear, left top, left bottom, from(#ef9b11), to(#405558));
+  background: linear-gradient(180deg, #ef9b11 0%, #405558 100%);
+  -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+          box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 10px;
+  width: 150px;
+  height: 50px;
+  color: #ffffff;
+}
+
+.section3 .OeBbut {
+  border: 2px solid #ffffff;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  background-color: transparent;
+  border-radius: 10px;
+  width: 150px;
+  height: 50px;
+  color: #ffffff;
+  margin-top: 10px;
 }
 
 @media screen and (min-width: 962px) {
@@ -261,6 +330,83 @@ body {
   .botmLine {
     padding-top: 100px;
     text-align: center;
+  }
+  .section3 {
+    background: -webkit-gradient(linear, left top, left bottom, from(rgba(239, 155, 17, 0.5)), to(rgba(64, 85, 88, 0.5)));
+    background: linear-gradient(180deg, rgba(239, 155, 17, 0.5) 0%, rgba(64, 85, 88, 0.5) 100%);
+    padding-left: 3vw;
+    padding-right: 3vw;
+    padding-top: 50px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+  }
+  .section3 h2 {
+    color: #12082D;
+    font-size: 56px;
+    padding-top: 30px;
+  }
+  .section3 p {
+    font-size: 18px;
+    color: rgba(18, 8, 45, 0.7);
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    width: 100%;
+    max-width: 800px;
+    line-height: 50px;
+    padding-top: 20px;
+  }
+  .section3 .finFree {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    gap: 20px;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    width: 200px;
+  }
+  .section3 .finFree h6 {
+    font-size: 14px;
+  }
+  .section3 .CanBut {
+    background: -webkit-gradient(linear, left top, left bottom, from(#ef9b11), to(#405558));
+    background: linear-gradient(180deg, #ef9b11 0%, #405558 100%);
+    -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+            box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 10px;
+    width: 300px;
+    height: 70px;
+    margin-top: 1vh;
+    color: #ffffff;
+    font-size: 14px;
+  }
+  .section3 .OeBbut {
+    border: 2px solid #ffffff;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
+    background-color: transparent;
+    border-radius: 10px;
+    width: 300px;
+    height: 70px;
+    color: #ffffff;
+    margin-left: 20px;
+    font-size: 14px;
+    margin-top: 1vh;
+  }
+  .section3 .sec3img {
+    width: 600px;
+  }
+  .section3 .btnSpace {
+    padding-top: 100px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
   }
 }
 /*# sourceMappingURL=style.css.map */
