--- a/sass/style.css
+++ b/sass/style.css
@@ -85,6 +85,11 @@ body {
           align-items: center;
 }
 
+.whatWeDo .finFreedom .ff {
+  color: #12082D;
+  font-size: 12px;
+}
+
 .whatWeDo .WwdLists-item {
   background: #ffffff;
   -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
@@ -126,6 +131,7 @@ body {
   -webkit-box-direction: reverse;
       -ms-flex-direction: column-reverse;
           flex-direction: column-reverse;
+  padding-bottom: 30px;
 }
 
 .section3 h2 {
@@ -155,6 +161,16 @@ body {
   width: 200px;
 }
 
+.section3 .btnSpace {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
 .section3 .CanBut {
   background: -webkit-gradient(linear, left top, left bottom, from(#ef9b11), to(#405558));
   background: linear-gradient(180deg, #ef9b11 0%, #405558 100%);
@@ -176,6 +192,53 @@ body {
   height: 50px;
   color: #ffffff;
   margin-top: 10px;
+}
+
+.section4 {
+  background-image: url(/images/section4Bgmobile.png);
+  background-size: contain;
+  background-repeat: no-repeat;
+  padding-top: 30px;
+  padding-left: 3vw;
+  padding-right: 3vw;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.section4 .sec4Class {
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  padding-left: 3vw;
+}
+
+.section4 .sec4Class h6 {
+  color: #EAB221;
+  font-size: 12px;
+  padding-top: 70px;
+}
+
+.section4 .sec4Class p {
+  color: #2F2F2F;
+  font-size: 16px;
+  font-weight: 600;
+  padding-bottom: 1px;
+}
+
+.section4 .imgSec4 {
+  padding-bottom: 0px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.section4 .imgSec4 .firstimg {
+  padding-bottom: 10px;
 }
 
 @media screen and (min-width: 962px) {
@@ -346,7 +409,7 @@ body {
             flex-direction: row;
   }
   .section3 h2 {
-    color: #12082D;
+    color: #12082d;
     font-size: 56px;
     padding-top: 30px;
   }
@@ -407,6 +470,56 @@ body {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+  }
+  .section4 {
+    background-image: url(/images/section4Bg.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    margin-top: -27px;
+    width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  .section4 .iphoneimg {
+    width: 30%;
+    padding-left: 100px;
+    padding-top: 100px;
+  }
+  .section4 .sec4Class {
+    -ms-flex-item-align: center;
+        -ms-grid-row-align: center;
+        align-self: center;
+    padding-left: 3vw;
+  }
+  .section4 .sec4Class h6 {
+    color: #EAB221;
+    font-size: 25px;
+    padding-top: 70px;
+  }
+  .section4 .sec4Class p {
+    color: #2F2F2F;
+    font-size: 50px;
+    font-weight: 600;
+    padding-bottom: 1px;
+  }
+  .section4 .imgSec4 {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+  }
+  .section4 .imgSec4 .firstimg {
+    padding-top: 30px;
+    width: 300px;
+    padding-right: 100px;
   }
 }
 /*# sourceMappingURL=style.css.map */
