--- a/sass/style.scss
+++ b/sass/style.scss
@@ -53,6 +53,10 @@
     display: flex;
     gap: $smallSpace;
     align-items: center;
+    .ff{
+        color: #12082D;
+        font-size: 12px;
+    }
   }
   .WwdLists-item {
     background: #ffffff;
@@ -91,6 +95,8 @@
   padding-top: 20px;
   display: flex;
   flex-direction: column-reverse;
+  padding-bottom: 30px;
+  
   h2 {
     color: #ffffff;
   }
@@ -109,6 +115,10 @@
     align-items: center;
     width: 200px;
   }
+  .btnSpace{
+    display: flex;
+    flex-direction: column;
+  }
   .CanBut {
     background: linear-gradient(180deg, #ef9b11 0%, #405558 100%);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
@@ -126,6 +136,39 @@
     height: 50px;
     color: #ffffff;
     margin-top: 10px;
+  }
+}
+
+.section4 {
+  background-image: url(/images/section4Bgmobile.png);
+  background-size: contain;
+  background-repeat: no-repeat;
+  padding-top: 30px;
+  padding-left: $sidePadding;
+  padding-right: $sidePadding;
+  display: flex;
+  .sec4Class{
+      align-self: center;
+      padding-left: $sidePadding;
+      h6{
+        color: #EAB221;
+        font-size: 12px;
+        padding-top: 70px;
+      }
+      p{
+        color: #2F2F2F;
+        font-size: 16px;
+        font-weight: 600;
+        padding-bottom: 1px;
+      }
+  }
+  .imgSec4{
+    padding-bottom: 0px;
+    display: flex;
+    flex-direction: column;
+    .firstimg{
+        padding-bottom: 10px;
+    }
   }
 }
 
@@ -243,69 +286,111 @@
     padding-top: 100px;
     text-align: center;
   }
-
-.section3 {
-  background: linear-gradient(
-    180deg,
-    rgba(239, 155, 17, 0.5) 0%,
-    rgba(64, 85, 88, 0.5) 100%
-  );
-  padding-left: $sidePadding;
-  padding-right: $sidePadding;
-  padding-top: 50px;
-  display: flex;
-  flex-direction: row;
-  h2 {
-    color: #12082D;
-    font-size: 56px;
-    padding-top: 30px;
-  }
-  p {
-    font-size: 18px;
-    color: rgba(18, 8, 45, 0.7);
-    align-items: center;
-    width: 100%;
-    max-width: 800px;
-    line-height: 50px;
-    padding-top: 20px;
-  }
-  .finFree {
+  .section3 {
+    background: linear-gradient(
+      180deg,
+      rgba(239, 155, 17, 0.5) 0%,
+      rgba(64, 85, 88, 0.5) 100%
+    );
+    padding-left: $sidePadding;
+    padding-right: $sidePadding;
+    padding-top: 50px;
     display: flex;
-    gap: $smallSpace;
-    align-items: center;
-    width: 200px;
-    h6{
-        font-size: 14px;
+    flex-direction: row;
+    h2 {
+      color: #12082d;
+      font-size: 56px;
+      padding-top: 30px;
     }
-  }
-  .CanBut {
-    background: linear-gradient(180deg, #ef9b11 0%, #405558 100%);
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    border-radius: 10px;
-    width: 300px;
-    height: 70px;
-    margin-top: 1vh;
-    color: #ffffff;
-    font-size: 14px;
-  }
-  .OeBbut {
-    border: 2px solid #ffffff;
-    box-sizing: border-box;
-    background-color: transparent;
-    border-radius: 10px;
-    width: 300px;
-    height: 70px;
-    color: #ffffff;
-    margin-left: 20px;
-    font-size: 14px;
-    margin-top: 1vh;
-  }
-  .sec3img{
+    p {
+      font-size: 18px;
+      color: rgba(18, 8, 45, 0.7);
+      align-items: center;
+      width: 100%;
+      max-width: 800px;
+      line-height: 50px;
+      padding-top: 20px;
+    }
+    .finFree {
+      display: flex;
+      gap: $smallSpace;
+      align-items: center;
+      width: 200px;
+      h6 {
+        font-size: 14px;
+      }
+    }
+    .CanBut {
+      background: linear-gradient(180deg, #ef9b11 0%, #405558 100%);
+      box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+      border-radius: 10px;
+      width: 300px;
+      height: 70px;
+      margin-top: 1vh;
+      color: #ffffff;
+      font-size: 14px;
+    }
+    .OeBbut {
+      border: 2px solid #ffffff;
+      box-sizing: border-box;
+      background-color: transparent;
+      border-radius: 10px;
+      width: 300px;
+      height: 70px;
+      color: #ffffff;
+      margin-left: 20px;
+      font-size: 14px;
+      margin-top: 1vh;
+    }
+    .sec3img {
       width: 600px;
-  }
-  .btnSpace{
+    }
+    .btnSpace {
       padding-top: 100px;
       display: flex;
+      flex-direction: row;
+    }
   }
-}
-}
+    .section4 {
+        background-image: url(/images/section4Bg.png);
+        background-size: cover;
+        background-repeat: no-repeat;
+        margin-top: -27px;
+        width: 100%;
+
+        display: flex;
+        .iphoneimg{
+            width: 30%;
+            padding-left: 100px;
+            padding-top: 100px;
+        }
+        .sec4Class{
+            align-self: center;
+            padding-left: $sidePadding;
+            h6{
+              color: #EAB221;
+              font-size: 25px;
+              padding-top: 70px;
+            }
+            p{
+              color: #2F2F2F;
+              font-size: 50px;
+              font-weight: 600;
+              padding-bottom: 1px;
+            }
+        }
+        .imgSec4{
+          display: flex;
+          flex-direction: row;
+            .firstimg{
+                padding-top: 30px;
+                width: 300px;
+                padding-right: 100px;
+
+            }
+          }
+        }
+        
+      }      
+
+
