--- a/sass/style.scss
+++ b/sass/style.scss
@@ -141,7 +141,7 @@
 
 .section4 {
   background-image: url(/images/section4Bgmobile.png);
-  background-size: contain;
+  background-size: cover;
   background-repeat: no-repeat;
   padding-top: 30px;
   padding-left: $sidePadding;
@@ -390,7 +390,7 @@
             }
           }
         }
-        
+
       }      
 
 
