--- a/sass/style.css
+++ b/sass/style.css
@@ -86,7 +86,7 @@ body {
 }
 
 .whatWeDo .finFreedom .ff {
-  color: #12082D;
+  color: #12082d;
   font-size: 12px;
 }
 
@@ -214,13 +214,13 @@ body {
 }
 
 .section4 .sec4Class h6 {
-  color: #EAB221;
+  color: #eab221;
   font-size: 12px;
   padding-top: 70px;
 }
 
 .section4 .sec4Class p {
-  color: #2F2F2F;
+  color: #2f2f2f;
   font-size: 16px;
   font-weight: 600;
   padding-bottom: 1px;
@@ -239,6 +239,57 @@ body {
 
 .section4 .imgSec4 .firstimg {
   padding-bottom: 10px;
+}
+
+.section5 {
+  background: rgba(255, 187, 11, 0.5);
+  background-size: cover;
+  background-repeat: no-repeat;
+  padding-left: 3vw;
+  padding-right: 3vw;
+  width: 100%;
+  height: 150vw;
+  padding-top: 30px;
+}
+
+.section5 h3 {
+  color: #12082d;
+  padding-bottom: 30px;
+}
+
+.section5 .oCs {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding-bottom: 20px;
+}
+
+.section5 .oCs h6 {
+  padding-left: 10px;
+}
+
+.section5 .janeDoe {
+  background-color: #ffffff;
+  border-radius: 10px;
+  padding-left: 20px;
+  padding-top: 20px;
+  line-height: 36px;
+}
+
+.section5 .janeDoe h5 {
+  padding-bottom: 10px;
+}
+
+.section5 .janeDoe p {
+  padding-bottom: 10px;
+}
+
+.section5 .btmLine {
+  text-align: center;
+  padding-top: 20px;
 }
 
 @media screen and (min-width: 962px) {
@@ -497,12 +548,12 @@ body {
     padding-left: 3vw;
   }
   .section4 .sec4Class h6 {
-    color: #EAB221;
+    color: #eab221;
     font-size: 25px;
     padding-top: 70px;
   }
   .section4 .sec4Class p {
-    color: #2F2F2F;
+    color: #2f2f2f;
     font-size: 50px;
     font-weight: 600;
     padding-bottom: 1px;
@@ -520,6 +571,51 @@ body {
     padding-top: 30px;
     width: 300px;
     padding-right: 100px;
+  }
+  .section5 {
+    background: rgba(255, 187, 11, 0.5);
+    padding-left: 3vw;
+    padding-right: 3vw;
+  }
+  .section5 .reviews {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+  .section5 .reviews {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    gap: 15px;
+    border: 2px solid red;
+  }
+  .section5 .revLists {
+    background-color: #fff;
+    display: block;
+    border-radius: 10px;
+    padding-left: 20px;
+    padding-top: 20px;
+    line-height: 36px;
+  }
+  .section5 h6 {
+    font-size: 18px;
+    font-family: "Poppins";
+  }
+  .section5 h3 {
+    font-family: "Poppins";
+    font-size: 42px;
+  }
+  .section5 .btmLine {
+    display: none;
+  }
+  .section5 .oCs {
+    padding-top: 30px;
   }
 }
 /*# sourceMappingURL=style.css.map */
