--- a/sass/style.css
+++ b/sass/style.css
@@ -150,15 +150,18 @@ body {
   padding-top: 20px;
 }
 
-.section3 .finFree {
+.section3 .finFree img {
+  width: 80vw;
+}
+
+.section3 .financefreed {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  gap: 20px;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  width: 200px;
+  gap: 10px;
 }
 
 .section3 .btnSpace {
@@ -204,6 +207,10 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+}
+
+.section4 .iphone img {
+  width: 45vw;
 }
 
 .section4 .sec4Class {
@@ -459,6 +466,15 @@ body {
         -ms-flex-direction: row;
             flex-direction: row;
   }
+  .section3 .sec3Container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: row-reverse;
+            flex-direction: row-reverse;
+  }
   .section3 h2 {
     color: #12082d;
     font-size: 56px;
@@ -471,7 +487,6 @@ body {
         -ms-flex-align: center;
             align-items: center;
     width: 100%;
-    max-width: 800px;
     line-height: 50px;
     padding-top: 20px;
   }
@@ -479,11 +494,12 @@ body {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    gap: 20px;
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
-    width: 200px;
+  }
+  .section3 .finFree img {
+    width: 51vw;
   }
   .section3 .finFree h6 {
     font-size: 14px;
@@ -494,7 +510,7 @@ body {
     -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
             box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 10px;
-    width: 300px;
+    width: 200px;
     height: 70px;
     margin-top: 1vh;
     color: #ffffff;
@@ -506,7 +522,7 @@ body {
             box-sizing: border-box;
     background-color: transparent;
     border-radius: 10px;
-    width: 300px;
+    width: 200px;
     height: 70px;
     color: #ffffff;
     margin-left: 20px;
@@ -530,16 +546,16 @@ body {
     background-image: url(/images/section4Bg.png);
     background-size: cover;
     background-repeat: no-repeat;
-    margin-top: -27px;
     width: 100%;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
   }
-  .section4 .iphoneimg {
-    width: 30%;
-    padding-left: 100px;
-    padding-top: 100px;
+  .section4 .iphone img {
+    width: 20vw;
   }
   .section4 .sec4Class {
     -ms-flex-item-align: center;
@@ -554,7 +570,7 @@ body {
   }
   .section4 .sec4Class p {
     color: #2f2f2f;
-    font-size: 50px;
+    font-size: 45px;
     font-weight: 600;
     padding-bottom: 1px;
   }
@@ -566,11 +582,11 @@ body {
     -webkit-box-direction: normal;
         -ms-flex-direction: row;
             flex-direction: row;
+    gap: 10px;
   }
   .section4 .imgSec4 .firstimg {
     padding-top: 30px;
-    width: 300px;
-    padding-right: 100px;
+    width: 200px;
   }
   .section5 {
     background: rgba(255, 187, 11, 0.5);
@@ -593,15 +609,20 @@ body {
         -ms-flex-pack: justify;
             justify-content: space-between;
     gap: 15px;
-    border: 2px solid red;
   }
   .section5 .revLists {
-    background-color: #fff;
-    display: block;
+    background-color: #ffffff;
     border-radius: 10px;
     padding-left: 20px;
     padding-top: 20px;
     line-height: 36px;
+    display: block;
+  }
+  .section5 .revLists h5 {
+    padding-bottom: 10px;
+  }
+  .section5 .revLists p {
+    padding-bottom: 10px;
   }
   .section5 h6 {
     font-size: 18px;
