--- a/sass/style.css
+++ b/sass/style.css
@@ -299,6 +299,75 @@ body {
   padding-top: 20px;
 }
 
+footer {
+  background-color: #12082d;
+  padding-left: 3vw;
+  padding-right: 3vw;
+  padding-top: 10px;
+}
+
+footer .cBlogo {
+  width: 35vw;
+}
+
+footer .openP {
+  width: 80vw;
+  padding-bottom: 30px;
+}
+
+footer p {
+  color: #fff;
+  font-size: 12px;
+  line-height: 33px;
+  font-family: "Poppins";
+}
+
+footer h4 {
+  font-size: 12px;
+  color: #EF9B11;
+}
+
+footer .quickL {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding-bottom: 30px;
+  width: 70vw;
+}
+
+footer .contactimg {
+  padding-bottom: 20px;
+}
+
+footer .contactimg img {
+  width: 5vw;
+}
+
+footer .storeimg {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+footer .storeimg img {
+  width: 40vw;
+}
+
+footer .customerCare {
+  padding-bottom: 30px;
+}
+
+footer .marq {
+  color: goldenrod;
+}
+
 @media screen and (min-width: 962px) {
   .none {
     display: -webkit-box;
@@ -592,6 +661,7 @@ body {
     background: rgba(255, 187, 11, 0.5);
     padding-left: 3vw;
     padding-right: 3vw;
+    height: 80vh;
   }
   .section5 .reviews {
     display: -webkit-box;
