--- a/sass/style.css
+++ b/sass/style.css
@@ -324,7 +324,7 @@ footer p {
 
 footer h4 {
   font-size: 12px;
-  color: #EF9B11;
+  color: #ef9b11;
 }
 
 footer .quickL {
@@ -707,6 +707,40 @@ footer .marq {
   }
   .section5 .oCs {
     padding-top: 30px;
+  }
+  .mobileFooter {
+    display: none;
+  }
+  .desktopFt {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    padding-top: 20px;
+  }
+  .desktopFt .letters {
+    width: 20vw;
+  }
+  .desktopFt .quickLink {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    width: 50vw;
+  }
+  .desktopFt .cBlogo {
+    width: 13vw;
+    padding-bottom: 20px;
+  }
+  .desktopFt .cntimg {
+    width: 2vw;
+  }
+  .desktopFt .appDwn {
+    width: 10vw;
   }
 }
 /*# sourceMappingURL=style.css.map */
